<resources>
    <string name="support_email">prepaid.service@nsdlbank.co.in</string>
    <string name="support_grievance_email">nodalofficer@nsdlbank.co.in</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email_address_or_mobile">Email Address</string>
    <string name="email_validation">Enter valid email id!</string>
    <string name="phone_validation">Enter valid phone number!</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_forget_password">Forget Password</string>
    <string name="title_login">Login</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="verify_account">Verify Account</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="welcome_to_paycraft">Welcome!</string>
    <string name="add_your_pay_craft_prepaid_card">Add your prepaid card\nand let’s get started.</string>
    <string name="add_card">Add Card</string>
    <string name="i_have_a_paycraft_card">I have a DhanTech Card</string>
    <string name="add">Add</string>
    <string name="view">View</string>
    <string name="unsubmitted_reports">Unsubmitted\nReports</string>
    <string name="un_submitted_count_reports">%d Reports</string>
    <string name="un_submitted_count_expenses">%d Expense</string>
    <string name="view_reports">View Reports</string>
    <string name="view_expenses">View Expenses</string>
    <string name="unreported_expenses">Unreported\nExpenses</string>
    <string name="expenses">Expenses</string>
    <string name="recent_transaction">Recent Transactions</string>
    <string name="reports">Reports</string>
    <string name="expense_reports">Expense Reports</string>
    <string name="advances">Advances</string>
    <string name="trips">Trips</string>
    <string name="cards">Cards</string>
    <string name="personal_details">Personal Details</string>
    <string name="preference">Preference</string>
    <string name="preferences">Preferences</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="your">YOUR</string>
    <string name="submit_your_expense_request">Submit your expense request</string>
    <string name="submit_your_expense_report_request">Submit your expense report request</string>
    <string name="submit_your_trip_request">Submit your trip request</string>
    <string name="submit_your_advance_request">Submit your advance request</string>
    <string name="add_advance">Add Advance</string>
    <string name="add_trip">Add Trip</string>
    <string name="add_expense_report">Add expense Report</string>
    <string name="add_expense_manually">Add expense Manually</string>
    <string name="scan_receipt">Scan Receipt</string>
    <string name="view_all">View All</string>
    <string name="proceed">Proceed</string>
    <string name="title_add_new_card">Add New Card</string>
    <string name="title_card_activation">Card Activation</string>
    <string name="title_cards">Cards</string>
    <string name="title_card_verification">Card Verification</string>
    <string name="title_update_mobile_number">Update Mobile Number</string>
    <string name="otp_has_sent_to">OTP has sent to registered mobile number.</string>
    <string name="update_mobile_number">Enter the new mobile number to be updated.</string>
    <string name="resend_otp_in">Resend OTP in 47</string>
    <string name="confirm">Confirm</string>
    <string name="update">Update</string>
    <string name="signout">Sign out</string>
    <string name="save_transaction">Save</string>
    <string name="cancel_transaction">Cancel</string>
    <string name="title_notifications">Notifications</string>
    <string name="select_category">Select Category*</string>
    <string name="ok">OK</string>
    <string name="date_time_say_ok">OK</string>
    <string name="title_expense_management">Expense Management</string>
    <string name="title_manage_expenses">Manage Expense</string>
    <string name="edit">Edit</string>
    <string name="title_report">Report</string>
    <string name="title_kyc">Kyc</string>
    <string name="title_pos">Set PIN</string>
    <string name="add_expenses">Add Expenses</string>
    <string name="include_transactions">Include Transactions</string>
    <string name="submit_comment">Submit</string>
    <string name="add_comment">Add Comment</string>
    <string name="top_up">Top-Up</string>
    <string name="add_dispute">Add Dispute</string>
    <string name="add_your_comment_here">Add your comment here.</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="add_your_dispute_here">Add your dispute here.</string>
    <string name="no_report">No Reports Found</string>
    <string name="select_report">Select Report</string>
    <string name="transaction_edit">Edit</string>
    <string name="add_to_report">Add to Report</string>
    <string name="change_report">Change Report</string>
    <string name="add_expense">Add Expense</string>
    <string name="unlink_confirmation">Are you sure do you want to unlink?</string>
    <string name="delete_confirmation">Are you sure do you want to delete?</string>
    <string name="close_trip">Are you sure do you want to close Trip?</string>
    <string name="cancel_trip">Are you sure do you want to cancel Trip?</string>
    <string name="delete_block_card">Are you sure do you want to block card?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="add_receipt">Add Receipt</string>
    <string name="receipts">Receipts</string>
    <string name="done">Done</string>
    <string name="add_image">Add Image</string>
    <string name="retake">Retake</string>
    <string name="adjest">Adjust</string>
    <string name="pick_image">Pick from Gallery</string>
    <string name="place_holder_small">Place Holder</string>
    <string name="place_holder_medium">It is just a Place Holder</string>
    <string name="profile">Profile</string>
    <string name="help">Help and Support</string>
    <string name="change_password">Change Password</string>
    <string name="enter_current_password">Enter Current Password</string>
    <string name="new_password">New Password</string>
    <string name="current_password">Current Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="trip_done">Done</string>
    <string name="rupee">₹</string>
    <string name="msg_short_pin_change">PIN Set Successful!</string>
    <string name="msg_pin_chaged">You card POS PIN has successfully updated. You can now use the updated PIN for all your future transactions.</string>
    <string name="default_notification_channel_id">101</string>
    <string name="default_notification_channel_name">DhanTech</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="payment_scheduled">Payment scheduled!</string>
    <string name="request_placed">Request Placed!</string>
    <string name="payment_scheduled_message">Your request for Rs %s recurring payment is scheduled successfully. We will notify once it’s on the way.</string>
    <string name="request_placed_message">Request taken for Add on Card generation” Service request to be processed in 48 hours</string>
    <string name="amount_message">You are accepting to pay Rs %s recurring payment to TopUp the prepaid card.</string>
    <string name="link_to_your_account">We will send an email to %s with a link to confirm your account.</string>
    <string name="maximum_of_attachments">You can upload maximum of 5 attachments!</string>
    <string name="payment_successfully">Payment Successfully!</string>
    <string name="top_up_has_been_successfully">Top-up has been successfully added to the wallet.</string>
    <string name="i_have_read_and_agree_to">I have read and agree to</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Policies</string>
    <string name="delete_account">Delete Account</string>
</resources>