<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black10"
    android:gravity="center_horizontal|bottom"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/scanReportIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/ic_add_advance"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:text="@string/scan_receipt"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12"
        android:visibility="invisible" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp15"
        android:fontFamily="@font/regular"
        android:text="@string/submit_your_advance_request"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/addExpenseManuallyIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/ic_add_advance" />

    <TextView
        android:id="@+id/addExpenseManuallyTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:text="@string/add_expense_manually"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp15"
        android:fontFamily="@font/regular"
        android:text="@string/submit_your_expense_request"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <ImageView
        android:id="@+id/addExpenseReportIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/ic_add_advance" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:text="@string/add_expense_report"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp15"
        android:fontFamily="@font/regular"
        android:text="@string/submit_your_expense_report_request"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />


    <ImageView
        android:id="@+id/addTripsIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/ic_add_advance" />

    <TextView
        android:id="@+id/addTripTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:text="@string/add_trip"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp15"
        android:fontFamily="@font/regular"
        android:text="@string/submit_your_trip_request"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />


    <ImageView
        android:id="@+id/addAdvanceIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        android:src="@drawable/ic_add_advance" />

    <TextView
        android:id="@+id/addAdvanceTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/add_advance"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/submit_your_advance_request"
        android:textColor="@color/white"
        android:textSize="@dimen/sp12" />

    <ImageView
        android:id="@+id/closeAppOptionsDialogIv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_options" />
</LinearLayout>